Forgot to add the new footer to other pages
added footer to other pages

--- a/media.html
+++ b/media.html
@@ -87,66 +87,114 @@
     </main>
 
     <footer>
-        <hr />
         <section aria-label="Crisis and Mental Health Support">
             <h3>Immediate Support & Crisis Resources</h3><br>
+            <section class="crisis-and-suicide-support">
+                <h4>Crisis & Suicide Support</h4>
+                <ul>
+                    <li>
+                        <a href="https://988lifeline.org" target="_blank" rel="noopener noreferrer">
+                            988 Suicide & Crisis Lifeline (U.S.) — Call or text 988
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.samaritans.org" target="_blank" rel="noopener noreferrer">
+                            Samaritans (UK & ROI) — Call 116 123
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.veteranscrisisline.net" target="_blank" rel="noopener noreferrer">
+                            Veterans Crisis Line (U.S.) — Call 988 then press 1
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://findahelpline.com" target="_blank" rel="noopener noreferrer">
+                            Find a Helpline — International crisis support
+                        </a>
+                    </li>
+                </ul>
+            </section>
 
-            <ul>
-                <li>
-                    <a href="https://988lifeline.org" target="_blank" rel="noopener noreferrer">
-                        988 Suicide &amp; Crisis Lifeline (U.S.) — Call or text 988 (24/7)
-                    </a>
-                </li>
+            <br>
 
-                <li>
-                    <a href="https://www.crisistextline.org" target="_blank" rel="noopener noreferrer">
-                        Crisis Text Line — Text HELLO to 741741 (U.S. &amp; Canada, 24/7)
-                    </a>
-                </li>
+            <section class="mental-health-support">
+                <h4>Mental Health Support</h4>
+                <ul>
+                    <li>
+                        <a href="https://www.opencounseling.com" target="_blank" rel="noopener noreferrer">
+                            Open Counseling — Mental health resources by country
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.nami.org/help" target="_blank" rel="noopener noreferrer">
+                            NAMI — Education, support, and helplines (U.S.)
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.mind.org.uk" target="_blank" rel="noopener noreferrer">
+                            Mind — Mental health support (UK)
+                        </a>
+                    </li>
+                </ul>
+            </section>
 
-                <li>
-                    <a href="https://www.samaritans.org" target="_blank" rel="noopener noreferrer">
-                        Samaritans — Call 116 123 (UK &amp; ROI, 24/7)
-                    </a>
-                </li>
+            <br>
 
-                <li>
-                    <a href="https://www.lifeline.org.au" target="_blank" rel="noopener noreferrer">
-                        Lifeline Australia — Call 13 11 14 (24/7)
-                    </a>
-                </li>
+            <section class="addiction-and-substance-support">
+                <h4>Addiction & Substance Use</h4>
+                <ul>
+                    <li>
+                        <a href="https://www.samhsa.gov/find-help/national-helpline" target="_blank"
+                            rel="noopener noreferrer">
+                            SAMHSA Helpline (U.S.) — Call 1-800-662-HELP
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.aa.org" target="_blank" rel="noopener noreferrer">
+                            Alcoholics Anonymous
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.na.org" target="_blank" rel="noopener noreferrer">
+                            Narcotics Anonymous
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.nhs.uk/live-well/addiction-support" target="_blank"
+                            rel="noopener noreferrer">
+                            NHS Addiction Support (UK)
+                        </a>
+                    </li>
+                </ul>
+            </section>
 
-                <li>
-                    <a href="https://findahelpline.com" target="_blank" rel="noopener noreferrer">
-                        Find a Helpline (IASP) — International crisis support directory
-                    </a>
-                </li>
+            <br>
 
-                <li>
-                    <a href="https://www.opencounseling.com/suicide-hotlines" target="_blank" rel="noopener noreferrer">
-                        Open Counseling Hotline Directory — Crisis lines by country
-                    </a>
-                </li>
+            <section class="behavioral-and-compulsive-support">
+                <h4>Behavioral & Compulsive Issues</h4>
+                <ul>
+                    <li>
+                        <a href="https://www.nofap.com" target="_blank" rel="noopener noreferrer">
+                            NoFap — Pornography addiction recovery
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.smartrecovery.org" target="_blank" rel="noopener noreferrer">
+                            SMART Recovery — Addiction & behavioral change
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.quit.org.au" target="_blank" rel="noopener noreferrer">
+                            Quit — Smoking and nicotine support
+                        </a>
+                    </li>
+                </ul>
+            </section>
 
-                <li>
-                    <a href="https://www.veteranscrisisline.net" target="_blank" rel="noopener noreferrer">
-                        Veterans Crisis Line (U.S.) — Call 988 then press 1, or text 838255
-                    </a>
-                </li>
+            <br>
 
-                <li>
-                    <a href="https://www.thetrevorproject.org" target="_blank" rel="noopener noreferrer">
-                        The Trevor Project — LGBTQ+ youth crisis support
-                    </a>
-                </li>
-            </ul><br>
+            <p><strong>If you are in immediate danger or thinking about harming yourself, contact local emergency services right now.</strong></p>
 
-            <p>
-                <strong>
-                    If you are in immediate danger or thinking about harming yourself,
-                    contact local emergency services right now.
-                </strong>
-            </p>
         </section>
     </footer>
 
