--- a/media.html
+++ b/media.html
@@ -80,6 +80,15 @@
                     <p>The Pursuit of Happyness is a grounded reminder that progress is built through persistence, not luck. It shows what happens when discipline replaces excuses and commitment outlasts comfort. The film challenges you to take responsibility under pressure, keep moving when results are invisible, and protect your belief in yourself even when circumstances offer no reassurance. It's not about shortcuts or motivation. It's about showing up every day, doing the work, and earning a better future step by step.</p>
                 </div>
             </div>
+
+            <div class="movie">
+                <a href="https://letterboxd.com/film/beautiful-boy-2018/" target="_blank"><img src="images/movies/movie2_BeautifulBoy.png" alt="Beautiful Boy - Felix Van Groeningen"></a>
+                <div class="video-content">
+                    <h2>Beautiful Boy - Felix Van Groeningen</h2><br>
+                    <p>Beautiful Boy is a portrayal of addiction. The film focuses on the long, uneven reality of recovery, relapse, accountability, and the strain that addiction places on both the individual and the people who care about them. It does not romanticize suffering or promise quick healing. Instead, it reinforces a hard truth: improvement is possible, but it requires patience, honesty, and sustained effort over time. This is not a motivational film. It is a realistic one, meant to build awareness, responsibility, and respect for the work real change demands.</p>
+                    <p><strong>Triggers:</strong> drug addiction, relapes, family distress.</p>
+                </div>
+            </div>
         </section><br><br>
 
         <h1>Quotes</h1><br>
