spelling error fix

--- a/media.html
+++ b/media.html
@@ -86,7 +86,7 @@
                 <div class="video-content">
                     <h2>Beautiful Boy - Felix Van Groeningen</h2><br>
                     <p>Beautiful Boy is a portrayal of addiction. The film focuses on the long, uneven reality of recovery, relapse, accountability, and the strain that addiction places on both the individual and the people who care about them. It does not romanticize suffering or promise quick healing. Instead, it reinforces a hard truth: improvement is possible, but it requires patience, honesty, and sustained effort over time. This is not a motivational film. It is a realistic one, meant to build awareness, responsibility, and respect for the work real change demands.</p>
-                    <p><strong>Triggers:</strong> drug addiction, relapes, family distress.</p>
+                    <p><strong>Triggers:</strong> drug addiction, relapse, family distress.</p>
                 </div>
             </div>
         </section><br><br>
