added mental health support line

--- a/playlist.html
+++ b/playlist.html
@@ -575,6 +575,11 @@
                             Mind — Mental health support (UK)
                         </a>
                     </li>
+                    <li>
+                        <a href="https://www.thetrevorproject.org/get-help/" target="_blank" rel="noopener noreferrer">
+                            LGBTQ+ Youth Crisis Support (U.S.) — Call 1-866-488-7386 (24/7) OR Text START to 678678
+                        </a>
+                    </li>
                 </ul>
             </section>
 
