added small note

--- a/playlist.html
+++ b/playlist.html
@@ -530,6 +530,9 @@
             </div>
         </div>
 
+        <br><br>
+
+        <p><i>*Songs that are on the Spotify playlist but are not listed here will be added soon.</i></p>
     </main>
 
     <footer>
