--- a/media.html
+++ b/media.html
@@ -45,6 +45,19 @@
                 <div class="podcast-content">
                     <h2>The Mindset Mentor - Rob Dial</h2><br>
                     <p>This podcast is a self-development podcast that helps you change how you think so you can improve how you live. It focuses on practical mindset shifts, habits, and perspectives that support personal growth, emotional resilience, and long-term fulfillment. Each episode breaks down common mental roadblocks like fear, self-doubt, comparison, and overwhelm and offers clear, actionable ways to reframe them. You get tools for building confidence, managing stress, setting goals, improving discipline, and nurturing a healthier relationship with yourself. The podcast teaches that healing and improvement aren't about perfection but about consistent, intentional small steps that create lasting change. It supports you in taking responsibility for your inner world so your outer world becomes more aligned with your values and potential.</p>
+                    <div class="notable-episodes">
+                        <ul>
+                            <li>
+                                <a href="https://open.spotify.com/episode/57k8bnwQAsB1aA4sqFyvr4"><strong>Turn Self-Sabotage into Self-Improvement</strong></a>
+                            </li>
+                            <li>
+                                <a href="https://open.spotify.com/episode/6Xt5ICYiHcxi41NTerow9d"><strong>How to Quiet Your Anxious Mind</strong></a>
+                            </li>
+                            <li>
+                                <a href="https://open.spotify.com/episode/0HKy1K4bhKM1eYzEkaTG8C"><strong>The Power of habit</strong></a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </section>
