--- a/media.html
+++ b/media.html
@@ -129,6 +129,17 @@
                     <q>— Cast Away (2000)</q>
                 </div>
             </div>
+
+            <div class="movie">
+                <a href="" target="_blank"><img src="images/movies/movie4_GroundhogDay.png" alt="Groundhog Day - Harold Ramis"></a>
+                <div class="video-content">
+                    <h2>Groundhog Day - Harold Ramis</h2><br>
+                    <p>A man is forced to confront himself through endless repetition. Escape is impossible, shortcuts fail, and progress only comes through disciplined change. Growth happens when entitlement is stripped away and replaced with responsibility, patience, and service. Mastery is built through consistency, not urgency. Meaning is earned by doing the right thing even when no finish line exists.</p>
+                    <q>"What if there is no tomorrow? There wasn't one today."</q>
+                    <br>
+                    <q>— Groundhog Day (1993)</q>
+                </div>
+            </div>
         </section>
         
         <br><br>
