--- a/media.html
+++ b/media.html
@@ -96,6 +96,16 @@
                     <p>In this video, Steve Jobs speaks directly to you through three brief stories about dropping out of college, losing and rediscovering his work, and confronting death. His message is clear: you cannot connect the dots looking forward, failure is often necessary, and remembering that your time is limited cuts through fear and expectation. The takeaway is simple—trust your intuition, pursue what you love, and do not settle for a life shaped by others.</p>
                 </div>
             </div>
+
+            <br>
+
+            <div class="video">
+                <iframe width="300" height="200" src="https://www.youtube.com/embed/Qw1CnLCk2kU" title="The Real Reason You Have No Friends: Psychologists Found 5 Rare Personality Traits" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <div class="video-content">
+                    <h2>The Real Reason You Have No Friends</h2><br>
+                    <p>This video is not offering solutions or behavior change. Its purpose is awareness. It explains why some people struggle with friendships not because they are broken or antisocial, but because their psychological traits conflict with how most people connect. It argues that overanalyzing interactions, rejecting social fakery, extreme self-reliance, low conformity, and delayed emotional expression quietly repel others, even when you genuinely care.</p>
+                </div>
+            </div>
         </section>
         
         <br><br>
