--- a/media.html
+++ b/media.html
@@ -73,6 +73,14 @@
                     <p>This book is a practical guide that helps you understand how your thoughts shape your emotional experience and overall well-being. It teaches that the stories your mind creates are not objective truth, and that much of your suffering comes from unexamined thinking patterns rather than actual events. The book offers clear explanations of how thoughts influence emotions, behaviors, and habits, and it provides tools to notice, question, and change unhelpful thinking. By learning to separate your identity from your thoughts, you gain emotional clarity, reduce anxiety and self-criticism, and make room for healthier beliefs. This supports self-healing and improvement by encouraging mindful awareness, emotional regulation, and intentional reframing so you can respond to life with greater peace, perspective, and purpose.</p>
                 </div>
             </div>
+
+            <div class="book">
+                <a href="https://josephnguyen.org/collections/books/products/the-overthinkers-guide-to-making-decisions-how-to-make-decisions-without-losing-your-mind?srsltid=AfmBOoqS3IwtkcqKmIBlhS2xlXH02pe45CZPAy7PAs7Uc-RaH_SJH3Er" target="_blank"><img src="images/books/book2_TheOverthinkersQuide.png" alt="The Overthinker's Guide to Making Decisions: How to Make Decisions without Losing Your Mind - Joseph Nguyen"></a>
+                <div class="book-content">
+                    <h2>The Overthinker's Guide to Making Decisions: How to Make Decisions without Losing Your Mind - Joseph Nguyen</h2><br>
+                    <p>This book examines why overthinking hijacks your decision making and how to interrupt that cycle. The book breaks down the psychological mechanisms behind analysis paralysis, fear of regret, perfectionism, and information overload. Rather than promising “perfect” choices, it focuses on practical, evidence-based strategies for making good decisions, reducing rumination, and trusting outcomes without endless second guessing.</p>
+                </div>
+            </div>
         </section>
         
         <br><br>
