--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <h2>What This Is</h2><br>
             <p>This is a curated collection of music and media chosen for one purpose: supporting self-improvement during difficult periods of life.</p>
             <p>Everything here is selected and reviewed manually. Nothing is added automatically. Each song or resource is included because it encourages responsibility, stability, persistence, and forward motion.</p>
+            <p>You do not need to connect with every song. Choose the ones that resonate with you and stick with them. If you find a song that supports your growth and isn't on this playlist, submit a new song request on the recommendations page for consideration.</p>
         </section>
 
         <br><br>
