--- a/playlist.html
+++ b/playlist.html
@@ -26,20 +26,13 @@
 
         <h1>Playlist</h1><br>
 
-        <p><i>*You can navigate to any song by clicking on the song/album cover.</i></p>
+        <p>Navigate to any song by clicking on the song/album cover.</p>
+        
+        <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0J2ZEWTzSlYikVtd5M0yNz?utm_source=generator&theme=1" width="100%" height="400" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
-        <div class="track">
-            <a href="https://open.spotify.com/playlist/0J2ZEWTzSlYikVtd5M0yNz" target="_blank"><img src="images/tracks/playlist.png" alt="Self Improvement - Grady Algire"></a>
-            <div class="track-content">
-                <h2>You can find the playlist on Spotify <a href="https://open.spotify.com/playlist/0J2ZEWTzSlYikVtd5M0yNz" target="_blank">here</a>.</h2><br>
-                <p>You do not need to connect with every song. Choose the ones that resonate with you and stick with them. If you find a song that supports your growth and isn't on this playlist, submit a new song request on the recommendations page for consideration.</p>
-                <p><i>*Playlist subject to change as the project evolves. Songs are not in any particular order.</i></p>
-            </div>
-        </div>
+        <p><i>*Playlist subject to change as the project evolves. Songs are not in any particular order.</i></p>
 
         <div id="playlist"></div>
-
-        <br><br>
 
         <p><i>*Songs that are on the Spotify playlist but are not listed here will be added soon.</i></p>
     </main>
