--- a/recommendations.html
+++ b/recommendations.html
@@ -44,6 +44,7 @@
                         <option value="">-- Select an option --</option>
                         <option value="song">Song (Playlist)</option>
                         <option value="media">Media (Podcast, Book, Video, Movie, Quote)</option>
+                        <option value="trigger">Trigger</option>
                         <option value="other">Other</option>
                     </select><br><br>
 
