--- a/media.html
+++ b/media.html
@@ -165,6 +165,13 @@
         <section class="quotes">
             <h1>Quotes</h1><br>
             <div class="quote">
+                <q>"Without music, life would be a mistake."</q><br>
+                <q>— Friedrich Nietzsche</q>
+            </div>
+
+            <br>
+            
+            <div class="quote">
                 <q>"It ain't what you don't know that gets you into trouble. It's what you know for sure that just ain't so."</q><br>
                 <q>— Mark Twain</q>
             </div>
