--- a/media.html
+++ b/media.html
@@ -114,6 +114,16 @@
                     <p>This video is not offering solutions or behavior change. Its purpose is awareness. It explains why some people struggle with friendships not because they are broken or antisocial, but because their psychological traits conflict with how most people connect. It argues that overanalyzing interactions, rejecting social fakery, extreme self-reliance, low conformity, and delayed emotional expression quietly repel others, even when you genuinely care.</p>
                 </div>
             </div>
+
+            <br>
+
+            <div class="video">
+                <iframe width="300" height="200" src="https://www.youtube.com/embed/DwauNBnF-8A" title="The Most Dangerous Mindset I See as a Therapist" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <div class="video-content">
+                    <h2>The Most Dangerous Mindset I See as a Therapist</h2><br>
+                    <p>This video looks at a growing intolerance for struggle and how convenience, technology, and quick fixes are replacing the difficult experiences that build discipline and meaning. Avoiding discomfort, whether in learning, relationships, or personal growth, we sacrifice the internal development that only comes from sustained effort and failure. This ultimately trades long term fulfillment for short term dopamine and low satisfaction.</p>
+                </div>
+            </div>
         </section>
         
         <br><br>
