--- a/playlist.html
+++ b/playlist.html
@@ -28,7 +28,7 @@
 
         <p>Navigate to any song by clicking on the song/album cover.</p>
         
-        <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0J2ZEWTzSlYikVtd5M0yNz?utm_source=generator&theme=1" width="100%" height="400" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0J2ZEWTzSlYikVtd5M0yNz?utm_source=generator&theme=1" width="100%" height="400" frameBorder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
         <p><i>*Playlist subject to change as the project evolves. Songs are not in any particular order.</i></p>
 
