--- a/media.html
+++ b/media.html
@@ -124,6 +124,17 @@
                     <p>This video looks at a growing intolerance for struggle and how convenience, technology, and quick fixes are replacing the difficult experiences that build discipline and meaning. Avoiding discomfort, whether in learning, relationships, or personal growth, we sacrifice the internal development that only comes from sustained effort and failure. This ultimately trades long term fulfillment for short term dopamine and low satisfaction.</p>
                 </div>
             </div>
+
+            <br>
+
+            <div class="video">
+                <iframe width="300" height="200" src="https://www.youtube.com/embed/z3Gy_oIwZyg" title="it really is that damn phone" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <div class="video-content">
+                    <h2>it really is that damn phone</h2><br>
+                    <p>A look at how phones quietly take over daily life. Being without one reveals how distracted, rushed, and disconnected we've become, and why time feels like it's speeding up. Constant stimulation isn't normal. Put the phone down more often, choose what actually matters, and reconnect with the real world before life passes you by.</p>
+                    <p>*If the gameplay in the video is distracting, listen to the audio like a podcast.</p>
+                </div>
+            </div>
         </section>
         
         <br><br>
