improved mobile formatting
also changed location of song number to be in the title of the song

--- a/playlist.html
+++ b/playlist.html
@@ -32,11 +32,11 @@
         
         <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0J2ZEWTzSlYikVtd5M0yNz?utm_source=generator&theme=1" width="100%" height="400" frameBorder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
-        <p><i>*Playlist subject to change as the project evolves. Songs are not in any particular order.</i></p>
+        <p class="note"><i>*Playlist subject to change as the project evolves. Songs are not in any particular order.</i></p>
 
         <div id="playlist"></div>
 
-        <p><i>*Songs that are on the Spotify playlist but are not listed here will be added soon.</i></p>
+        <p class="note"><i>*Songs that are on the Spotify playlist but are not listed here will be added soon.</i></p>
     </main>
 
     <footer>
